# langchain-exercises

./: README.md  main.py  pyproject.toml
neural_nine/: .pylintrc  CLAUDE.md  README.md  pyproject.toml
neural_nine/src/agents/explainer/: Context.py  ExplainerAgentMiddleware.py  agent_executor.py
neural_nine/src/agents/knowledge_base/: agent_executor.py
neural_nine/src/agents/weather/: Context.py
neural_nine/src/chats/image_description/: chat.py
neural_nine/src/models/: ModelFactory.py
neural_nine/src/prompts/: PromptCatalog.py
neural_nine/src/tools/knowledge_base/: tool.py
neural_nine/src/tools/user/: tool.py
src/agents/explainer/: ExplainerAgentMiddleware.py  agent.py
src/agents/knowledge_base/: agent.py
src/agents/weather/: agent.py  agent_executor.py
src/chats/image_description/: chat.py
src/chats/programming/: chat.py
src/models/: ModelFactory.py  ModelInfo.py
src/tools/knowledge_base/: tool.py
src/tools/weather/: tool.py
