[project]
name = "langchain-exercises"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-chroma>=1.1.0",
    "langchain-core>=1.4.8",
    "langchain-litellm>=0.7.0",
    "langchain[anthropic,openai]>=1.3.11",
    "python-dotenv>=1.2.2",
]

[tool.pylint.master]
ignore-patterns = [".*\\.png$"]

